# Billing

./: .gitignore  Makefile  README.md  billing.py  pyproject.toml  renovate.json  requirements.txt
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  run_billing.yml
repositories/: cloudwatch_repository.py
services/: billing_service.py  notification_service.py
src/: billing_application.py  main.py  protocols.py
src/billing/: main.py
src/repositories/: cloudwatch_repository.py
src/services/: billing_service.py  notification_service.py
tests/: test_billing_application.py  test_doubles.py
