[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.0",
    "requests>=2.32.0",
    "mypy>=1.8.0",
    "autopep8>=2.0.0",
    "boto3-stubs>=1.39.0",
    "mypy-boto3-cloudwatch>=1.39.0",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
